2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/unittest.spad.pamphlet: Allow literal
	strings in input.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/util.lisp: Correct a typo.

2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/aggcat.spad.pamphlet,
	src/algebra/string.spad.pamphlet: Add two missing
	'convert'-s.

2012-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/database.boot, src/interp/patches.lisp,
	src/interp/msgdb.boot, src/interp/i-syscmd.boot,
	src/interp/setq.lisp, src/interp/lisplib.boot,
	src/interp/vmlisp.lisp, src/interp/clammed.boot,
	src/lib/cfuns-c.c, src/lib/Makefile.in:
	Misc cleanups.

2012-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scan.boot: Disable special handling of
	spaces after escape.

2012-01-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/fricas-lisp.lisp, src/lisp/fricas-package.lisp,
	src/boot/btincl2.boot, src/boot/initial-env.lisp,
	src/boot/ptyout.boot, src/interp/int-top.boot,
	src/interp/vmlisp.lisp: Improve file handling.
	src/boot/compiled/* : Update.

2012-01-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/special2.spad.pamphlet: Add double precision
	elliptic integrals.
	src/algebra/sf.spad.pamphlet: Use them.
	src/algebra/exposed.lsp.pamphlet: Expose them.
	src/algebra/Makefile.in: Adjust.

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/interp/ax.boot: fix aldor-interface

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/aldor/Makefile.in, src/aldor/initlist.as: enable Matrix over
	SemiRng+AbelianMonoid

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/jet.spad.pamphlet: Remove unnecessary variable
	name from polynomial type.

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/jet.spad.pamphlet: Fix dependency order of
	arguments.

2012-01-06  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/interp/interop.boot: fix regression in depsys --> bootsys
	switch
