@@ -444,8 +444,6 @@ OutputForm(): SetCategory with
           ++ f / g creates the equivalent infix form.
         "^":    (%, %) -> %
           ++ f ^ g creates the equivalent infix form.
-        "div":   (%, %) -> %
-          ++ f div g creates the equivalent infix form.
         "rem":   (%, %) -> %
           ++ f rem g creates the equivalent infix form.
         "quo":   (%, %) -> %
@@ -586,7 +584,6 @@ OutputForm(): SetCategory with
         a * b       == convert [eform '_*,     a, b]
         a / b       == convert [eform '_/,     a, b]
         a ^ b      == convert [eform '_^,    a, b]
-        a div b     == convert [eform '_div,   a, b]
         a rem b     == convert [eform '_rem,   a, b]
         a quo b     == convert [eform '_quo,   a, b]
         a exquo b   == convert [eform '_exquo, a, b]
