@@ -1,5 +1,12 @@
 2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/scan.boot, src/interp/s-parser.boot,
+	src/interp/cparse.boot, src/interp/bootlex.lisp:
+	Make Spad and intepreter keywords closer.
+	src/algebra/outform.spad.pamphlet: Remove 'div'.
+
+2012-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/unittest.spad.pamphlet: Allow literal
 	strings in input.
 
